--- a/admin.html
+++ b/admin.html
@@ -88,6 +88,7 @@
     let selectedFeature;
     let selectedLayer;
     let map;
+    let markersGroup; // Group to store lot label markers
 
     const SUPABASE_URL = "https://poxxulxqzxwotequkwbw.supabase.co";
     const SUPABASE_SERVICE_ROLE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InBveHh1bHhxenh3b3RlcXVrd2J3Iiwicm9sZSI6InNlcnZpY2Vfcm9sZSIsImlhdCI6MTc0MDI1NjM2NywiZXhwIjoyMDU1ODMyMzY3fQ.qCvdI1kkLn72ucM9aBuXttK-95vux-YRC_J2PUSI8WA"; 
@@ -103,6 +104,9 @@
         })
       };
       L.control.layers(baseLayers).addTo(map);
+      
+      // Initialize markers group and add to map
+      markersGroup = L.layerGroup().addTo(map);
 
       fetch(`${SUPABASE_URL}/storage/v1/object/public/${STORAGE_BUCKET}/${FILE_NAME}`)
         .then(response => response.json())
@@ -136,24 +140,30 @@
     function loadGeoJSON() {
       if (!geojsonData) return;
 
-      // Remove previous GeoJSON layers (if any)
+      // Remove previous GeoJSON layers
       map.eachLayer(layer => {
         if (layer instanceof L.GeoJSON) {
           map.removeLayer(layer);
         }
       });
+      // Clear markers group
+      if (markersGroup) {
+        markersGroup.clearLayers();
+      }
 
       L.geoJSON(geojsonData, {
         style: function (feature) {
           return { color: getLotColor(feature.properties.status), weight: 2 };
         },
         onEachFeature: function (feature, layer) {
+          // Create a label marker and add to markersGroup
           let label = L.divIcon({
             className: 'lot-label',
             html: feature.properties.plot_id,
             iconSize: [1, 1]
           });
-          L.marker(layer.getBounds().getCenter(), { icon: label }).addTo(map);
+          let marker = L.marker(layer.getBounds().getCenter(), { icon: label });
+          markersGroup.addLayer(marker);
 
           layer.on('click', function () {
             // If drawing mode is active, ignore lot editing
@@ -287,7 +297,7 @@
           Shape_Area: 0,
           price: "",
           status: "For Sale",
-          Description: zoneName, // Optionally store the zone name in Description or add a new property
+          Description: zoneName,
           buy_link: ""
         },
         geometry: {
@@ -295,7 +305,6 @@
           coordinates: [drawingPoints.map(latlng => [latlng.lng, latlng.lat])]
         }
       };
-      // Ensure geojsonData is a FeatureCollection and add the new feature
       if (!geojsonData.features) {
         geojsonData = {
           type: "FeatureCollection",
@@ -308,7 +317,6 @@
         };
       }
       geojsonData.features.push(newFeature);
-      // Disable drawing mode and refresh the map to show the new zone
       disableDrawingMode();
       loadGeoJSON();
     }
@@ -341,7 +349,7 @@
       if (!confirm("Are you sure you want to delete this lot?")) {
         return;
       }
-      // Use a loose comparison by converting to string to cover numeric vs. string issues
+      // Remove the selected feature using string conversion to handle numeric/string differences
       geojsonData.features = geojsonData.features.filter(feature => {
         return String(feature.properties.plot_id) !== String(selectedFeature.plot_id);
       });
