--- a/admin.html
+++ b/admin.html
@@ -10,8 +10,8 @@
     #map { height: 60vh; width: 100%; }
     #editor { padding: 10px; }
     .lot-label {
-      font-size: 12px; /* Slightly larger font */
-      font-weight: 300; /* Thin font */
+      font-size: 12px;
+      font-weight: 300;
       color: black;
       background: none;
       padding: 0;
@@ -70,7 +70,7 @@
     </label><br>
     <label>Description: <textarea id="lot-description" onblur="autoSaveAndUpload()"></textarea></label><br>
     <label>Buy Link: <input type="text" id="lot-link" onblur="autoSaveAndUpload()"></label><br>
-    <!-- New Delete button -->
+    <!-- Delete button -->
     <button id="deleteLotButton" onclick="deleteLot()">🗑 Delete Lot</button>
   </div>
 
@@ -85,10 +85,11 @@
 
   <script>
     let geojsonData;
+    let geojsonLayer;  // Holds the current GeoJSON layer on the map
     let selectedFeature;
     let selectedLayer;
     let map;
-    let markersGroup;  // New layer group for markers
+    let markersGroup;  // Layer group for markers
 
     const SUPABASE_URL = "https://poxxulxqzxwotequkwbw.supabase.co";
     const SUPABASE_SERVICE_ROLE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InBveHh1bHhxenh3b3RlcXVrd2J3Iiwicm9sZSI6InNlcnZpY2Vfcm9sZSIsImlhdCI6MTc0MDI1NjM2NywiZXhwIjoyMDU1ODMyMzY3fQ.qCvdI1kkLn72ucM9aBuXttK-95vux-YRC_J2PUSI8WA"; 
@@ -104,10 +105,11 @@
         })
       };
       L.control.layers(baseLayers).addTo(map);
-      
+
       // Initialize markersGroup
       markersGroup = L.layerGroup().addTo(map);
 
+      // Load the GeoJSON from Supabase
       fetch(`${SUPABASE_URL}/storage/v1/object/public/${STORAGE_BUCKET}/${FILE_NAME}`)
         .then(response => response.json())
         .then(data => {
@@ -137,37 +139,36 @@
       reader.readAsText(file);
     }
 
+    // Re-load the GeoJSON layer on the map
     function loadGeoJSON() {
       if (!geojsonData) return;
 
-      // Remove previous GeoJSON layers (if any)
-      map.eachLayer(layer => {
-        if (layer instanceof L.GeoJSON) {
-          map.removeLayer(layer);
-        }
-      });
+      // Remove previous GeoJSON layer if it exists
+      if (geojsonLayer) {
+        map.removeLayer(geojsonLayer);
+      }
       // Clear previous markers
       if (markersGroup) {
         markersGroup.clearLayers();
       }
 
-      L.geoJSON(geojsonData, {
+      geojsonLayer = L.geoJSON(geojsonData, {
         style: function (feature) {
           return { color: getLotColor(feature.properties.status), weight: 2 };
         },
         onEachFeature: function (feature, layer) {
+          // Create a label icon with the lot's plot_id
           let labelIcon = L.divIcon({
             className: 'lot-label',
             html: feature.properties.plot_id,
             iconSize: [1, 1]
           });
-          // Add marker to the markersGroup
+          // Add marker to the markers group
           markersGroup.addLayer(L.marker(layer.getBounds().getCenter(), { icon: labelIcon }));
 
           layer.on('click', function () {
             // If drawing mode is active, ignore lot editing
             if (isDrawing) return;
-
             if (selectedLayer) {
               selectedLayer.setStyle({ color: getLotColor(selectedLayer.feature.properties.status) });
             }
@@ -196,7 +197,6 @@
       selectedFeature.properties.Category = document.getElementById('lot-category').value;
       selectedFeature.properties.Description = document.getElementById('lot-description').value;
       selectedFeature.properties.buy_link = document.getElementById('lot-link').value;
-
       saveGeoJSONToSupabase();
     }
 
@@ -204,7 +204,6 @@
       const statusIndicator = document.getElementById("statusIndicator");
       statusIndicator.textContent = "Uploading...";
       statusIndicator.className = "status-indicator";
-
       const fileContent = new Blob([JSON.stringify(geojsonData, null, 4)], { type: "application/json" });
 
       try {
@@ -216,24 +215,21 @@
           },
           body: fileContent
         });
-
         statusIndicator.textContent = "✅ Upload Success";
         statusIndicator.className = "status-indicator success";
-        setTimeout(() => statusIndicator.textContent = "", 3000); // Disappears after 3 seconds
+        setTimeout(() => statusIndicator.textContent = "", 3000);
       } catch {
         statusIndicator.textContent = "❌ Error uploading.";
         statusIndicator.className = "status-indicator error";
       }
     }
 
-    /* ---------- New Drawing Functionality for Editing Lots (Drawing Zones) ---------- */
+    /* ---------- Drawing Functionality for Creating Zones ---------- */
 
-    // Global variables for drawing mode
     let isDrawing = false;
     let drawingPoints = [];
     let drawingLayer = null;
 
-    // Enable drawing mode when "EDIT LOTS" button is clicked
     function enableDrawingMode() {
       isDrawing = true;
       drawingPoints = [];
@@ -241,13 +237,10 @@
         map.removeLayer(drawingLayer);
         drawingLayer = null;
       }
-      // Show the drawing editor UI
       document.getElementById('drawingEditor').style.display = 'block';
-      // Attach a click listener to the map for drawing points
       map.on('click', onMapClickForDrawing);
     }
 
-    // Map click handler for drawing mode: adds points and updates the temporary polygon
     function onMapClickForDrawing(e) {
       if (!isDrawing) return;
       drawingPoints.push(e.latlng);
@@ -258,21 +251,18 @@
       }
     }
 
-    // Helper function to calculate the next numeric plot_id
+    // Helper: Get next numeric plot_id based on existing features
     function getNextPlotId() {
       let maxId = 0;
       if (geojsonData && geojsonData.features) {
         geojsonData.features.forEach(f => {
           let pid = parseInt(f.properties.plot_id);
-          if (!isNaN(pid) && pid > maxId) {
-            maxId = pid;
-          }
+          if (!isNaN(pid) && pid > maxId) maxId = pid;
         });
       }
       return maxId + 1;
     }
 
-    // Finish drawing and save the new zone
     function finishDrawing() {
       if (drawingPoints.length < 3) {
         alert("You need at least 3 points to form a zone.");
@@ -284,7 +274,6 @@
         return;
       }
       let newId = getNextPlotId();
-      // Create a new GeoJSON feature for the drawn zone using the same structure as lots.geojson
       let newFeature = {
         type: "Feature",
         properties: {
@@ -304,30 +293,23 @@
           coordinates: [drawingPoints.map(latlng => [latlng.lng, latlng.lat])]
         }
       };
-      // Ensure geojsonData is a FeatureCollection and add the new feature
       if (!geojsonData.features) {
         geojsonData = {
           type: "FeatureCollection",
           name: "lots",
-          crs: {
-            type: "name",
-            properties: { name: "urn:ogc:def:crs:OGC:1.3:CRS84" }
-          },
+          crs: { type: "name", properties: { name: "urn:ogc:def:crs:OGC:1.3:CRS84" } },
           features: []
         };
       }
       geojsonData.features.push(newFeature);
-      // Disable drawing mode and refresh the map to show the new zone
       disableDrawingMode();
       loadGeoJSON();
     }
 
-    // Cancel drawing mode and remove any temporary drawing
     function cancelDrawing() {
       disableDrawingMode();
     }
 
-    // Helper function to disable drawing mode
     function disableDrawingMode() {
       isDrawing = false;
       drawingPoints = [];
@@ -347,16 +329,15 @@
         alert("No lot selected to delete.");
         return;
       }
-      if (!confirm("Are you sure you want to delete this lot?")) {
-        return;
-      }
-      // Filter out the selected feature using plot_id
+      if (!confirm("Are you sure you want to delete this lot?")) return;
+      // Filter out the selected feature from geojsonData.features
       geojsonData.features = geojsonData.features.filter(feature => {
         return String(feature.properties.plot_id) !== String(selectedFeature.plot_id);
       });
-      // Clear the editor, reset selectedFeature, and reload the GeoJSON
+      // Reset selectedFeature and hide the editor
       selectedFeature = null;
       document.getElementById('editor').style.display = 'none';
+      // Reload the GeoJSON layer
       loadGeoJSON();
     }
   </script>
