--- a/admin.html
+++ b/admin.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GeoJSON Editor for Lots</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
   <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
-  <!-- Include Supabase JS client -->
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js/dist/supabase.min.js"></script>
   <style>
     #map { height: 60vh; width: 100%; }
     #editor { padding: 10px; }
     .lot-label {
-      font-size: 12px;
-      font-weight: 300;
+      font-size: 12px; /* Slightly larger font */
+      font-weight: 300; /* Thin font */
       color: black;
       background: none;
       padding: 0;
@@ -41,7 +39,7 @@
 </head>
 <body onload="initializeMap()">
   <h2>GeoJSON Lot Editor</h2>
-  <input type="file" id="fileInput" accept=".geojson" onchange="loadFile(event)" />
+  <input type="file" id="fileInput" accept=".geojson" onchange="loadFile(event)">
   <button onclick="downloadGeoJSON()">📥 Download JSON</button>
   <button onclick="saveGeoJSONToSupabase()">🚀 Master Update</button>
   <!-- New button to enable drawing mode -->
@@ -52,7 +50,7 @@
   <div id="editor" style="display:none;">
     <h3>Edit Lot</h3>
     <p><strong>Lot ID:</strong> <span id="lot-id"></span></p>
-    <label>Price: $<input type="text" id="lot-price" onblur="autoSaveAndUpload()" /></label><br />
+    <label>Price: $<input type="text" id="lot-price" onblur="autoSaveAndUpload()"></label><br>
     <label>Status:
       <select id="lot-status" onchange="autoSaveAndUpload()">
         <option value="For Sale">For Sale</option>
@@ -60,8 +58,8 @@
         <option value="Reserved">Reserved</option>
         <option value="Not for Sale">Not for Sale</option>
       </select>
-    </label><br />
-    <label>Lot Size: <input type="text" id="lot-size" onblur="autoSaveAndUpload()" /></label><br />
+    </label><br>
+    <label>Lot Size: <input type="text" id="lot-size" onblur="autoSaveAndUpload()"></label><br>
     <label>Category:
       <select id="lot-category" onchange="autoSaveAndUpload()">
         <option value="Single Family Homesites">Single Family Homesites</option>
@@ -69,140 +67,111 @@
         <option value="Commercial">Commercial</option>
         <option value="Mixed Use">Mixed Use</option>
       </select>
-    </label><br />
-    <label>Description: <textarea id="lot-description" onblur="autoSaveAndUpload()"></textarea></label><br />
-    <label>Buy Link: <input type="text" id="lot-link" onblur="autoSaveAndUpload()" /></label><br />
-    <!-- Delete button -->
-    <button id="deleteLotButton" onclick="deleteLot()">🗑 Delete Lot</button>
+    </label><br>
+    <label>Description: <textarea id="lot-description" onblur="autoSaveAndUpload()"></textarea></label><br>
+    <label>Buy Link: <input type="text" id="lot-link" onblur="autoSaveAndUpload()"></label><br>
   </div>
 
   <!-- New drawing editor for zone creation -->
   <div id="drawingEditor">
     <h3>Draw Zone</h3>
     <p>Click on the map to add vertices that form the zone border. When finished, enter a zone name and click "Save Zone".</p>
-    <label>Zone Name: <input type="text" id="zoneName" /></label><br />
+    <label>Zone Name: <input type="text" id="zoneName"></label><br>
     <button onclick="finishDrawing()">Save Zone</button>
     <button onclick="cancelDrawing()">Cancel Drawing</button>
   </div>
 
   <script>
-    // Supabase configuration – using your project URL and service role key.
-    // (Exposing the service role key in client code is not secure for production.)
-    const SUPABASE_URL = "https://poxxulxqzxwotequkwbw.supabase.co";
-    const SUPABASE_SERVICE_ROLE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InBveHh1bHhxenh3b3RlcXVrd2J3Iiwicm9sZSI6InNlcnZpY2Vfcm9sZSIsImlhdCI6MTc0MDI1NjM2NywiZXhwIjoyMDU1ODMyMzY3fQ.qCvdI1kkLn72ucM9aBuXttK-95vux-YRC_J2PUSI8WA";
-    const STORAGE_BUCKET = "geojson-files";
-    const FILE_NAME = "lots.geojson";
-    // Initialize Supabase client
-    const supabase = supabase.createClient(SUPABASE_URL, SUPABASE_SERVICE_ROLE_KEY);
-
     let geojsonData;
-    let geojsonLayer; // Holds the current GeoJSON layer on the map
     let selectedFeature;
     let selectedLayer;
     let map;
-    let markersGroup; // Layer group for markers
 
-    // Use Supabase client to download the file from storage
-    async function loadFileFromSupabase() {
-      const { data, error } = await supabase.storage
-        .from(STORAGE_BUCKET)
-        .download(FILE_NAME);
-      if (error) {
-        console.error("Error downloading file:", error);
-        return;
-      }
-      const text = await data.text();
-      geojsonData = JSON.parse(text);
-      loadGeoJSON();
-    }
+    const SUPABASE_URL = "https://poxxulxqzxwotequkwbw.supabase.co";
+    const SUPABASE_SERVICE_ROLE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InBveHh1bHhxenh3b3RlcXVrd2J3Iiwicm9sZSI6InNlcnZpY2Vfcm9sZSIsImlhdCI6MTc0MDI1NjM2NywiZXhwIjoyMDU1ODMyMzY3fQ.qCvdI1kkLn72ucM9aBuXttK-95vux-YRC_J2PUSI8WA"; 
+    const STORAGE_BUCKET = "geojson-files";
+    const FILE_NAME = "lots.geojson";
 
     function initializeMap() {
-      map = L.map("map").setView([11.575, -86.244], 16);
+      map = L.map('map').setView([11.575, -86.244], 16);
       let baseLayers = {
-        "Street View": L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png").addTo(map),
-        "Satellite View": L.tileLayer("https://{s}.google.com/vt/lyrs=s&x={x}&y={y}&z={z}", {
-          subdomains: ["mt0", "mt1", "mt2", "mt3"]
+        'Street View': L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(map),
+        'Satellite View': L.tileLayer('https://{s}.google.com/vt/lyrs=s&x={x}&y={y}&z={z}', {
+          subdomains: ['mt0', 'mt1', 'mt2', 'mt3']
         })
       };
       L.control.layers(baseLayers).addTo(map);
 
-      // Initialize markersGroup
-      markersGroup = L.layerGroup().addTo(map);
-
-      // Load the GeoJSON file using Supabase client
-      loadFileFromSupabase();
+      fetch(`${SUPABASE_URL}/storage/v1/object/public/${STORAGE_BUCKET}/${FILE_NAME}`)
+        .then(response => response.json())
+        .then(data => {
+          geojsonData = data;
+          loadGeoJSON();
+        })
+        .catch(error => console.error("❌ Error loading GeoJSON from Supabase:", error));
     }
 
     function getLotColor(status) {
       switch (status) {
-        case "For Sale":
-          return "green";
-        case "Sold":
-          return "red";
-        case "Reserved":
-          return "yellow";
-        case "Not for Sale":
-          return "grey";
-        default:
-          return "blue";
+        case "For Sale": return "green";
+        case "Sold": return "red";
+        case "Reserved": return "yellow";
+        case "Not for Sale": return "grey";
+        default: return "blue"; 
       }
     }
 
     function loadFile(event) {
-      // Fallback: if you choose to load from a local file instead of Supabase
       const file = event.target.files[0];
       const reader = new FileReader();
-      reader.onload = function (e) {
+      reader.onload = function(e) {
         geojsonData = JSON.parse(e.target.result);
         loadGeoJSON();
       };
       reader.readAsText(file);
     }
 
-    // Re-load the GeoJSON layer on the map
     function loadGeoJSON() {
       if (!geojsonData) return;
-      // Remove previous GeoJSON layer if it exists
-      if (geojsonLayer) {
-        map.removeLayer(geojsonLayer);
-      }
-      // Clear previous markers
-      if (markersGroup) {
-        markersGroup.clearLayers();
-      }
-      geojsonLayer = L.geoJSON(geojsonData, {
+
+      // Remove previous GeoJSON layers (if any)
+      map.eachLayer(layer => {
+        if (layer instanceof L.GeoJSON) {
+          map.removeLayer(layer);
+        }
+      });
+
+      L.geoJSON(geojsonData, {
         style: function (feature) {
           return { color: getLotColor(feature.properties.status), weight: 2 };
         },
         onEachFeature: function (feature, layer) {
-          // Create a label icon with the lot's plot_id
-          let labelIcon = L.divIcon({
-            className: "lot-label",
+          let label = L.divIcon({
+            className: 'lot-label',
             html: feature.properties.plot_id,
             iconSize: [1, 1]
           });
-          // Add marker to the markers group
-          markersGroup.addLayer(
-            L.marker(layer.getBounds().getCenter(), { icon: labelIcon })
-          );
-          layer.on("click", function () {
-            if (isDrawing) return; // Ignore clicks in drawing mode
+          L.marker(layer.getBounds().getCenter(), { icon: label }).addTo(map);
+
+          layer.on('click', function () {
+            // If drawing mode is active, ignore lot editing
+            if (isDrawing) return;
+
             if (selectedLayer) {
-              selectedLayer.setStyle({
-                color: getLotColor(selectedLayer.feature.properties.status)
-              });
+              selectedLayer.setStyle({ color: getLotColor(selectedLayer.feature.properties.status) });
             }
             selectedLayer = layer;
             layer.setStyle({ color: "#00FFFF" });
+
             selectedFeature = feature;
-            document.getElementById("editor").style.display = "block";
-            document.getElementById("lot-id").innerText = feature.properties.plot_id;
-            document.getElementById("lot-price").value = feature.properties.price || "";
-            document.getElementById("lot-status").value = feature.properties.status || "For Sale";
-            document.getElementById("lot-size").value = feature.properties.area_m || "";
-            document.getElementById("lot-category").value = feature.properties.Category || "Single Family Homesites";
-            document.getElementById("lot-description").value = feature.properties.Description || "";
-            document.getElementById("lot-link").value = feature.properties.buy_link || "";
+            document.getElementById('editor').style.display = 'block';
+            document.getElementById('lot-id').innerText = feature.properties.plot_id;
+            document.getElementById('lot-price').value = feature.properties.price || '';
+            document.getElementById('lot-status').value = feature.properties.status || 'For Sale';
+            document.getElementById('lot-size').value = feature.properties.area_m || '';
+            document.getElementById('lot-category').value = feature.properties.Category || 'Single Family Homesites';
+            document.getElementById('lot-description').value = feature.properties.Description || '';
+            document.getElementById('lot-link').value = feature.properties.buy_link || ''; 
           });
         }
       }).addTo(map);
@@ -210,44 +179,50 @@
 
     function autoSaveAndUpload() {
       if (!selectedFeature) return;
-      selectedFeature.properties.price = document.getElementById("lot-price").value;
-      selectedFeature.properties.status = document.getElementById("lot-status").value;
-      selectedFeature.properties.area_m = document.getElementById("lot-size").value;
-      selectedFeature.properties.Category = document.getElementById("lot-category").value;
-      selectedFeature.properties.Description = document.getElementById("lot-description").value;
-      selectedFeature.properties.buy_link = document.getElementById("lot-link").value;
+      selectedFeature.properties.price = document.getElementById('lot-price').value;
+      selectedFeature.properties.status = document.getElementById('lot-status').value;
+      selectedFeature.properties.area_m = document.getElementById('lot-size').value;
+      selectedFeature.properties.Category = document.getElementById('lot-category').value;
+      selectedFeature.properties.Description = document.getElementById('lot-description').value;
+      selectedFeature.properties.buy_link = document.getElementById('lot-link').value;
+
       saveGeoJSONToSupabase();
     }
 
-    // Use Supabase client to update the file
     async function saveGeoJSONToSupabase() {
       const statusIndicator = document.getElementById("statusIndicator");
       statusIndicator.textContent = "Uploading...";
+      statusIndicator.className = "status-indicator";
+
+      const fileContent = new Blob([JSON.stringify(geojsonData, null, 4)], { type: "application/json" });
+
       try {
-        const { data, error } = await supabase
-          .storage
-          .from(STORAGE_BUCKET)
-          .update(
-            FILE_NAME,
-            JSON.stringify(geojsonData, null, 4),
-            { upsert: true, contentType: "application/json" }
-          );
-        if (error) throw error;
+        const response = await fetch(`${SUPABASE_URL}/storage/v1/object/${STORAGE_BUCKET}/${FILE_NAME}`, {
+          method: "PUT",
+          headers: {
+            "Authorization": `Bearer ${SUPABASE_SERVICE_ROLE_KEY}`,
+            "Content-Type": "application/json"
+          },
+          body: fileContent
+        });
+
         statusIndicator.textContent = "✅ Upload Success";
         statusIndicator.className = "status-indicator success";
-        setTimeout(() => (statusIndicator.textContent = ""), 3000);
-      } catch (err) {
+        setTimeout(() => statusIndicator.textContent = "", 3000); // Disappears after 3 seconds
+      } catch {
         statusIndicator.textContent = "❌ Error uploading.";
         statusIndicator.className = "status-indicator error";
-        console.error("Error uploading to Supabase:", err);
       }
     }
 
-    /* ---------- Drawing Functionality for Creating Zones ---------- */
+    /* ---------- New Drawing Functionality for Editing Lots (Drawing Zones) ---------- */
+
+    // Global variables for drawing mode
     let isDrawing = false;
     let drawingPoints = [];
     let drawingLayer = null;
 
+    // Enable drawing mode when "EDIT LOTS" button is clicked
     function enableDrawingMode() {
       isDrawing = true;
       drawingPoints = [];
@@ -255,43 +230,50 @@
         map.removeLayer(drawingLayer);
         drawingLayer = null;
       }
-      document.getElementById("drawingEditor").style.display = "block";
-      map.on("click", onMapClickForDrawing);
+      // Show the drawing editor UI
+      document.getElementById('drawingEditor').style.display = 'block';
+      // Attach a click listener to the map for drawing points
+      map.on('click', onMapClickForDrawing);
     }
 
+    // Map click handler for drawing mode: adds points and updates the temporary polygon
     function onMapClickForDrawing(e) {
       if (!isDrawing) return;
       drawingPoints.push(e.latlng);
       if (drawingLayer) {
         drawingLayer.setLatLngs(drawingPoints);
       } else {
-        drawingLayer = L.polygon(drawingPoints, { color: "blue" }).addTo(map);
+        drawingLayer = L.polygon(drawingPoints, { color: 'blue' }).addTo(map);
       }
     }
 
-    // Helper: Get next numeric plot_id based on existing features
+    // Helper function to calculate the next numeric plot_id
     function getNextPlotId() {
       let maxId = 0;
       if (geojsonData && geojsonData.features) {
         geojsonData.features.forEach(f => {
           let pid = parseInt(f.properties.plot_id);
-          if (!isNaN(pid) && pid > maxId) maxId = pid;
+          if (!isNaN(pid) && pid > maxId) {
+            maxId = pid;
+          }
         });
       }
       return maxId + 1;
     }
 
+    // Finish drawing and save the new zone
     function finishDrawing() {
       if (drawingPoints.length < 3) {
         alert("You need at least 3 points to form a zone.");
         return;
       }
-      let zoneName = document.getElementById("zoneName").value;
+      let zoneName = document.getElementById('zoneName').value;
       if (!zoneName) {
         alert("Please enter a zone name.");
         return;
       }
       let newId = getNextPlotId();
+      // Create a new GeoJSON feature for the drawn zone using the same structure as lots.geojson
       let newFeature = {
         type: "Feature",
         properties: {
@@ -311,23 +293,30 @@
           coordinates: [drawingPoints.map(latlng => [latlng.lng, latlng.lat])]
         }
       };
+      // Ensure geojsonData is a FeatureCollection and add the new feature
       if (!geojsonData.features) {
         geojsonData = {
           type: "FeatureCollection",
           name: "lots",
-          crs: { type: "name", properties: { name: "urn:ogc:def:crs:OGC:1.3:CRS84" } },
+          crs: {
+            type: "name",
+            properties: { name: "urn:ogc:def:crs:OGC:1.3:CRS84" }
+          },
           features: []
         };
       }
       geojsonData.features.push(newFeature);
+      // Disable drawing mode and refresh the map to show the new zone
       disableDrawingMode();
       loadGeoJSON();
     }
 
+    // Cancel drawing mode and remove any temporary drawing
     function cancelDrawing() {
       disableDrawingMode();
     }
 
+    // Helper function to disable drawing mode
     function disableDrawingMode() {
       isDrawing = false;
       drawingPoints = [];
@@ -335,27 +324,9 @@
         map.removeLayer(drawingLayer);
         drawingLayer = null;
       }
-      map.off("click", onMapClickForDrawing);
-      document.getElementById("drawingEditor").style.display = "none";
-      document.getElementById("zoneName").value = "";
-    }
-
-    /* ---------- Delete Lot Functionality ---------- */
-    async function deleteLot() {
-      if (!selectedFeature) {
-        alert("No lot selected to delete.");
-        return;
-      }
-      if (!confirm("Are you sure you want to delete this lot?")) return;
-      // Remove the selected feature from geojsonData.features
-      geojsonData.features = geojsonData.features.filter(feature => {
-        return String(feature.properties.plot_id) !== String(selectedFeature.plot_id);
-      });
-      selectedFeature = null;
-      document.getElementById("editor").style.display = "none";
-      // Save updated GeoJSON to Supabase and refresh the map
-      await saveGeoJSONToSupabase();
-      loadGeoJSON();
+      map.off('click', onMapClickForDrawing);
+      document.getElementById('drawingEditor').style.display = 'none';
+      document.getElementById('zoneName').value = "";
     }
   </script>
 </body>
